name:                hluacows
version:             0.1.0.0
synopsis:            Bulls&Cows in Lua with DialoGUI
description:         Please see README.md
homepage:            http://github.com/astynax/hluacows#readme
license:             BSD3
license-file:        LICENSE
author:              astynax
maintainer:          astynax84@gmail.com
copyright:           2010 astynax
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hluacows
  ghc-options:         -Wall -static -optl-static -optl-pthread
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       dialogui,
                       bytestring,
                       hslua
